@@ -49,7 +49,7 @@ bool binaryCompareFiles(const char * fileName1, const char * fileName2)
 	const size_t file2Size = ftell(file2);
 	if(file1Size != file2Size)
 	{
-		logTestString("binaryCompareFiles: Files are different sizes: %d vs %d\n", 
+		logTestString("binaryCompareFiles: Files are different sizes: %d vs %d\n",
 			file1Size, file2Size);
 		(void)fclose(file1);
 		(void)fclose(file2);
@@ -84,6 +84,167 @@ bool binaryCompareFiles(const char * fileName1, const char * fileName2)
 	(void)fclose(file2);
 
 	return filesAreIdentical;
+}
+
+bool xmlCompareFiles(irr::io::IFileSystem * fs, const char * fileName1, const char * fileName2)
+{
+	if(!fileName1 || !fileName2)
+		return false;
+
+	io::IXMLReaderUTF8* reader1 = fs->createXMLReaderUTF8(fileName1);
+	if (!reader1)
+	{
+		logTestString("xmlCompareFiles: Could not create a XML reader for '%s'\n", fileName1);
+		return false;
+	}
+	io::IXMLReaderUTF8* reader2 = fs->createXMLReaderUTF8(fileName2);
+	if (!reader2)
+	{
+		logTestString("xmlCompareFiles: Could not create a XML reader for '%s'\n", fileName2);
+		reader1->drop();
+		return false;
+	}
+
+	bool different = false;
+	bool read1 = reader1->read();
+	bool read2 = reader2->read();
+	if ( !read1 && !read2 )
+	{
+		logTestString("xmlCompareFiles: Both files have no nodes: '%s' %s - is this ok?\n", fileName1, fileName2);
+		reader1->drop();
+		reader2->drop();
+		return true;
+	}
+
+	while (read1 && read2)
+	{
+		io::EXML_NODE type1 = reader1->getNodeType();
+		io::EXML_NODE type2 = reader2->getNodeType();
+		if ( type1 != type2 )
+		{
+			const c8* name1 = reader1->getNodeName();
+			const c8* name2 = reader2->getNodeName();
+			logTestString("xmlCompareFiles: file '%s' has different nodes than %s in nodes \"%s\" and \"%s\"\n"
+							, fileName1, fileName2, name1 ? name1 : "NULL", name2 ? name2 : "NULL");
+			different = true;
+			break;
+		}
+
+		if ( reader1->isEmptyElement() != reader2->isEmptyElement() )
+		{
+			logTestString("xmlCompareFiles: file '%s' has different empty elements than %s\n", fileName1, fileName2);
+			different = true;
+			break;
+		}
+
+		switch ( type1 )
+		{
+			case io::EXN_NONE:
+			case io::EXN_ELEMENT_END:
+				break;
+
+			case io::EXN_ELEMENT:
+			{
+				core::stringc name1(reader1->getNodeName());
+				core::stringc name2(reader2->getNodeName());
+				if ( name1 != name2 )
+				{
+					logTestString("xmlCompareFiles: %s has node %s where %s has node %s\n"
+									, fileName1, name1.c_str(), fileName2, name2.c_str() );
+					different = true;
+					break;
+				}
+
+				unsigned int numAttributes1 = reader1->getAttributeCount();
+				unsigned int numAttributes2 = reader2->getAttributeCount();
+				if ( numAttributes1 != numAttributes2 )
+				{
+					logTestString("xmlCompareFiles: %s node %s has %d attributes where %s node %s has %d attributes\n"
+									, fileName1, name1.c_str(), numAttributes1
+									, fileName2, name2.c_str(), numAttributes2);
+					different = true;
+					break;
+				}
+
+				for ( unsigned int i=0; i < numAttributes1; ++i )
+				{
+					core::stringc attribName1(reader1->getAttributeName(int(i)));
+					core::stringc attribName2(reader2->getAttributeName(int(i)));
+
+					if ( attribName1 != attribName2 )
+					{
+						logTestString("xmlCompareFiles: %s node %s has attribute-name \"%s\" where %s node %s has name \"%s\"\n"
+									, fileName1, name1.c_str(), attribName1.c_str()
+									, fileName2, name2.c_str(), attribName2.c_str());
+						different = true;
+						break;
+					}
+
+					core::stringc attribVal1(reader1->getAttributeValue(int(i)));
+					core::stringc attribVal2(reader2->getAttributeValue(int(i)));
+					if ( attribName1 != attribName2 )
+					{
+						logTestString("xmlCompareFiles: %s node %s has attribute-value \"%s\" where %s node %s has value \"%s\"\n"
+									, fileName1, name1.c_str(), attribVal1.c_str()
+									, fileName2, name2.c_str(), attribVal2.c_str());
+						different = true;
+						break;
+					}
+				}
+
+				break;
+			}
+
+			case io::EXN_TEXT:
+			case io::EXN_UNKNOWN:
+			case io::EXN_COMMENT:
+			case io::EXN_CDATA:
+			{
+				core::stringc nodeData1( reader1->getNodeData() );
+				core::stringc nodeData2( reader1->getNodeData() );
+
+				// removeChars('\r') needed because irrXML doesn't do that (as it probably should)
+				nodeData1.removeChars(core::stringc('\r'));
+				nodeData2.removeChars(core::stringc('\r'));
+
+				if ( nodeData1 != nodeData2 )
+				{
+					logTestString("xmlCompareFiles: %s has data \"%s\" where %s has data \"%s\"\n"
+									, fileName1, nodeData1.c_str()
+									, fileName2, nodeData2.c_str());
+					different = true;
+				}
+				break;
+			}
+		}
+
+		if ( different )
+			break;
+
+		read1 = reader1->read();
+		read2 = reader2->read();
+	}
+
+	if ( !different && !read1 && !read2 )
+	{
+		reader1->drop();
+		reader2->drop();
+		return true;
+	}
+
+	if ( !different && read1 )
+	{
+		logTestString("xmlCompareFiles: file '%s' has more nodes than %s\n", fileName1, fileName2);
+	}
+	if ( !different && read2 )
+	{
+		logTestString("xmlCompareFiles: file '%s' has more nodes than %s\n", fileName2, fileName1);
+	}
+
+	reader1->drop();
+	reader2->drop();
+
+	return false;
 }
 
 
@@ -178,7 +339,7 @@ bool takeScreenshotAndCompareAgainstReference(irr::video::IVideoDriver * driver,
 	}
 
 	irr::core::stringc driverName = driver->getName();
-	
+
 	// For OpenGL and Burning, chop the version number out. Other drivers have more stable version numbers.
 	// TA: Sorry Rogerborg. burnings video also has the version number inside;-)
 	//     maybe you sould take the getDriverType Info for this
